rounds totals working

--- a/app/src/main/res/layout/game_list_round_item.xml
+++ b/app/src/main/res/layout/game_list_round_item.xml
@@ -1,43 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><!--<com.daimajia.swipe.SwipeLayout
-    android:id="@+id/slGameList"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/triple_margin">-->
-
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llGameListItemContainer"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/triple_standard_margin">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <!-- Bottom View Start-->
-
-    <!--<LinearLayout
-        android:id="@+id/bottom_wrapper"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@color/grayLight"
-        android:layout_gravity="end"
-        android:weightSum="1">
-
-        <ImageButton
-            android:id="@+id/ibDeleteItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:src="@drawable/ic_bin_white"
-            android:tint="@color/grayMM"
-            tools:ignore="ContentDescription"/>
-
-    </LinearLayout>-->
-
-    <!-- Bottom View End-->
-
-    <!-- Surface View Start -->
-
+    <!-- ROUND DATA -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:padding="@dimen/standard_margin">
@@ -48,14 +20,16 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/standard_margin"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"
+            tools:text="16" />
 
         <TextView
             android:id="@+id/tvGameListItemHandPoints"
             android:layout_width="@dimen/triple_standard_margin"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"
+            tools:text="8" />
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -69,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:lines="1"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="38" />
 
             <ImageView
                 android:id="@+id/ivGameListItemPenaltyIconP1"
@@ -79,7 +54,9 @@
                 android:src="@drawable/ic_whistle_black_24"
                 android:tint="@color/purplePenalty"
                 android:visibility="gone"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                tools:text="16"
+                tools:visibility="visible" />
 
         </RelativeLayout>
 
@@ -95,7 +72,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:lines="1"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="-16" />
 
             <ImageView
                 android:id="@+id/ivGameListItemPenaltyIconP2"
@@ -121,7 +99,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:lines="1"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="-16" />
 
             <ImageView
                 android:id="@+id/ivGameListItemPenaltyIconP3"
@@ -147,7 +126,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:lines="1"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="-16" />
 
             <ImageView
                 android:id="@+id/ivGameListItemPenaltyIconP4"
@@ -163,6 +143,67 @@
 
     </LinearLayout>
 
-    <!-- Surface View End -->
+    <!-- ROUND TOTALS -->
+    <LinearLayout
+        android:id="@+id/llGameListItemRoundTotalsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:paddingStart="@dimen/standard_margin"
+        android:paddingEnd="@dimen/standard_margin">
 
-</LinearLayout><!--</com.daimajia.swipe.SwipeLayout>-->
+        <TextView
+            android:layout_width="@dimen/standard_margin"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:layout_width="@dimen/triple_standard_margin"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/standard_margin" />
+
+        <TextView
+            android:id="@+id/tvGameListItemRoundTotalPointsP1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:lines="1"
+            tools:text="38" />
+
+        <TextView
+            android:id="@+id/tvGameListItemRoundTotalPointsP2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:lines="1"
+            tools:text="-16" />
+
+        <TextView
+            android:id="@+id/tvGameListItemRoundTotalPointsP3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_weight="1"
+            android:lines="1"
+            android:gravity="center"
+            tools:text="-16" />
+
+        <TextView
+            android:id="@+id/tvGameListItemRoundTotalPointsP4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/standard_margin"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:lines="1"
+            tools:text="-16" />
+
+    </LinearLayout>
+
+</LinearLayout>
