--- a/app/src/main/res/layout/game_table_seat_east.xml
+++ b/app/src/main/res/layout/game_table_seat_east.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/tvTableSeatEastPoints"
-        style="@style/tvTableSeat"
+        style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
@@ -42,7 +42,7 @@
 
     <TextView
         android:id="@+id/tvTableSeatEastName"
-        style="@style/tvTableSeat"
+        style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatEastPoints"
