--- a/app/src/main/res/layout/game_table_seat_south.xml
+++ b/app/src/main/res/layout/game_table_seat_south.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tvTableSeatSouthPoints"
-        style="@style/tvTableSeat"
+        style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivTableSeatSouthSeatWindIcon"
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/tvTableSeatSouthName"
-        style="@style/tvTableSeat"
+        style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatSouthPoints"
