--- a/app/src/main/res/layout/game_table_seat_west.xml
+++ b/app/src/main/res/layout/game_table_seat_west.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tvTableSeatWestPoints"
-        style="@style/tvTableSeat"
+        style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivTableSeatWestSeatWindIcon"
@@ -43,7 +43,7 @@
 
     <TextView
         android:id="@+id/tvTableSeatWestName"
-        style="@style/tvTableSeat"
+        style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatWestPoints"
